--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
+  "type": "module",
   "dependencies": {
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
-    "typescript-language-server": "^0.8.1"
+    "typescript-language-server": "^0.8.1",
+    "@babel/cli": "7.16.0",
+    "@babel/core": "7.16.5",
+    "@babel/node": "7.16.5",
+    "@babel/preset-env": "7.16.5",
+    "@babel/register": "7.16.5"
+  },
+  "scripts": {
+    "javascript-example": "node javascript-example.js",
+    "typescript-example": "ts-node typescript-example.js"
   }
 }
